Closed
Bug 347819
Opened 18 years ago
Closed 18 years ago
Change some spellchecker assertions to just return failure
Categories
(Core :: Spelling checker, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: brettw, Assigned: brettw)
References
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
6.11 KB,
patch
|
bryner
:
review+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
Assignee | ||
Comment 1•18 years ago
|
||
Attachment #232641 -
Flags: review?(bryner)
Comment 2•18 years ago
|
||
here are the assertions I'm seeing after the fix for bug #347561:
WARNING: NS_ENSURE_TRUE(editor) failed, file
c:/builds/bonecho/mozilla/extension
s/spellcheck/src/mozInlineSpellChecker.cpp, line 1125
WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed, file
c:/builds/bonecho/mozilla
/extensions/spellcheck/src/mozInlineSpellWordUtil.cpp, line 91
I'll get some stacks for brett.
Updated•18 years ago
|
Attachment #232641 -
Flags: review?(bryner) → review+
Assignee | ||
Comment 3•18 years ago
|
||
Comment on attachment 232641 [details] [diff] [review]
Patch for the common cases
Requesting approval for this trivial change to assertions.
Attachment #232641 -
Flags: approval1.8.1?
Assignee | ||
Comment 4•18 years ago
|
||
Fixed on trunk, leaving open for branch.
Assignee | ||
Comment 5•18 years ago
|
||
This patch also should improve performance a bit, since it saves a QueryReferent for every word checked.
Assignee | ||
Updated•18 years ago
|
Blocks: SpellCheckTracking
Comment 6•18 years ago
|
||
Comment on attachment 232641 [details] [diff] [review]
Patch for the common cases
a=drivers, please land on the branch.
Attachment #232641 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Comment 7•18 years ago
|
||
Fixed on branch.
Comment 8•18 years ago
|
||
> I'll get some stacks for brett.
brett, I've updated and rebuilt the branch on windows xp, and with your changes and I no longer assert.
thanks for fixing this.
You need to log in
before you can comment on or make changes to this bug.
Description
•