Bug 347819 r=bryner Change assersions hit in normal usage to non-assertions & return failure